# Fundval-re

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  README.en.md  README.md  build.sh  config.json  docker-compose.contract.yml  docker-compose.sqlite.yml  docker-compose.yml  docker-start.sh  features.json  icon.icns  start.sh  status.sh  stop.sh
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.json.example  main.py  manage.py  pyproject.toml  pytest.ini  requirements.txt
backend-rs/: Cargo.toml  Dockerfile
backend-rs/crates/api/: Cargo.toml
backend-rs/migrations/: 20260216000001_create_auth_user.sql  20260216000001_create_users.sql  20260216000002_create_core_tables.sql  20260216000003_create_position_operation.sql  20260216000005_create_nav_history_and_accuracy.sql
backend/api/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py  viewsets.py
backend/api/migrations/: 0001_initial.py  0004_remove_fund_yesterday_date_remove_fund_yesterday_nav_and_more.py  0006_fundnavhistory.py
backend/api/services/: position_history.py
backend/crates/api/: Cargo.toml
backend/fundval/: asgi.py  bootstrap.py  config.py  settings.py  urls.py  wsgi.py
backend/migrations/: 20260216000004_create_watchlist_tables.sql  20260218000006_add_source_to_nav_history.sql  20260220000007_create_sniffer_tables.sql
backend/migrations/postgres/: 20260220000001_create_risk_free_rate.sql  20260220000002_create_crawl_jobs.sql  20260220000007_create_sniffer_tables.sql  20260221000001_create_fund_relate_theme.sql  20260221000002_create_ml_sector_model_and_signal_snapshot.sql  20260221000003_create_sim_tables.sql  20260223000001_add_sim_strategy_and_train_rounds.sql  20260223000002_create_task_queue.sql  20260223000003_create_fund_analysis_snapshot.sql  20260223000004_create_forecast_model.sql  20260224000001_create_index_daily_price.sql  20260224000002_add_refer_index_code_to_fund_analysis_snapshot.sql
backend/migrations/sqlite/: 20260216000001_create_auth_user.sql  20260216000002_create_core_tables.sql  20260216000003_create_position_operation.sql  20260216000004_create_watchlist_tables.sql  20260216000005_create_nav_history_and_accuracy.sql  20260218000006_add_source_to_nav_history.sql  20260220000001_create_risk_free_rate.sql  20260220000002_create_crawl_jobs.sql  20260220000007_create_sniffer_tables.sql  20260221000001_create_fund_relate_theme.sql  20260221000002_create_ml_sector_model_and_signal_snapshot.sql  20260221000003_create_sim_tables.sql  20260223000001_add_sim_strategy_and_train_rounds.sql  20260223000002_create_task_queue.sql  20260223000003_create_fund_analysis_snapshot.sql  20260223000004_create_forecast_model.sql  20260224000001_create_index_daily_price.sql  20260224000002_add_refer_index_code_to_fund_analysis_snapshot.sql
backend/tests/: conftest.py  test_account_serializer.py  test_account_summary.py  test_api_accounts.py  test_api_funds.py  test_api_misc.py  test_api_position_history.py  test_api_positions.py  test_api_watchlists.py  test_auth.py  test_bootstrap.py  test_calculation.py  test_calculation_consistency.py  test_commands.py  test_config.py  test_field_refactoring.py  test_health.py  test_models_account.py  test_models_fund.py  test_models_position.py  test_models_watchlist.py  test_nav_history_api.py  test_nav_history_command.py  test_nav_history_model.py
quant-service/: .dockerignore  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
quant-service/app/: main.py  settings.py
quant-service/app/indicators/: macd.py
quant-service/app/pytrader/: backtest.py  registry.py
quant-service/app/qbot_xalpha/: bte_engine.py  policy_buyandhold.py  policy_scheduled.py  policy_scheduled_tune.py  policy_scheduled_window.py  rounding.py  series.py  strategy_bte_average_scheduled.py  strategy_bte_balance.py  strategy_bte_scheduled_sell_on_xirr.py  strategy_bte_tendency28.py  strategy_grid.py  strategy_indicator_cross.py  strategy_indicator_points.py  xirr.py
quant-service/app/qbot_xalpha_compat/: mul.py  (+2 more)
quant-service/tests/: test_deps_import.py  test_fund_strategies_compare.py  test_fund_strategies_ts.py  test_health.py  test_macd.py  test_macd_calc.py  test_macd_route.py  test_metrics_non_date_series.py  test_pytrader_backtest.py  test_vendor_xalpha_import.py  test_xalpha_backtest_endpoint.py  test_xalpha_like_grid.py  test_xalpha_like_metrics.py  test_xalpha_like_qdiipredict.py  test_xalpha_like_scheduled.py  test_xalpha_trade_mul_report.py
quant-service/xalpha/: __init__.py  cons.py  evaluate.py  indicator.py  info.py  multiple.py  toolbox.py  trade.py  universal.py
(+375 files in other folders)
