[workspace]
resolver = "3"
members = ["crates/api"]

[workspace.package]
edition = "2024"
license = "AGPL-3.0"

[workspace.dependencies]
axum = { version = "0.8", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
dotenvy = "0.15"
jsonwebtoken = "9"
rand = "0.8"
rand_core = "0.6"
pbkdf2 = "0.12"
sha2 = "0.10"
rust_decimal = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "normalize-path"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
csv = "1"

# 数据库先引入（health 会做最小探活），后续模块逐步使用
sqlx = { version = "0.8", features = ["runtime-tokio", "any", "postgres", "sqlite", "uuid", "chrono", "migrate", "rust_decimal"] }
