[package]
name = "api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
argon2.workspace = true
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
