[package]
name = "api"
version = "1.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
base64.workspace = true
dotenvy.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
rand_core.workspace = true
pbkdf2.workspace = true
sha2.workspace = true
rust_decimal.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
csv.workspace = true
